crates/cli/tests/snapshots/run@literals.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/literals.nemo
    - "--output"
    - tests/build/literals.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/literals.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
