crates/cli/tests/snapshots/run@modules.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/modules.nemo
    - "--output"
    - tests/build/modules.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/modules.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
