crates/cli/tests/snapshots/run@modules.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/modules/main.nemo
    - tests/run/modules/dep.nemo
    - "--output"
    - tests/build/modules.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/modules
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
