crates/cli/tests/snapshots/run@poly.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/poly.nemo
    - "--output"
    - tests/build/poly.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/poly.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
