crates/cli/tests/snapshots/run@return.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/return.nemo
    - "--output"
    - tests/build/return.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/return.nemo
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
