crates/cli/tests/snapshots/run@structs.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - compile
    - tests/run/structs.nemo
    - "--output"
    - tests/build/structs.wasm
  env:
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/run/structs.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
[31m[07] Error:[0m Unknown type Vec
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mVec[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m            ─┬─  
 [38;5;240m  │[0m             ╰─── Unknown type Vec
[38;5;246m───╯[0m

[31m[07] Error:[0m Unknown type Vec
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mVec[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m            ─┬─  
 [38;5;240m  │[0m             ╰─── Unknown type Vec
[38;5;246m───╯[0m

[31m[07] Error:[0m Unknown type Vec
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mVec[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249my[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m.[0m[38;5;249m0[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m            ─┬─  
 [38;5;240m  │[0m             ╰─── Unknown type Vec
[38;5;246m───╯[0m

[31m[07] Error:[0m Unknown type Vec
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mVec[38;5;249m [0m[38;5;249m{[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249my[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m.[0m[38;5;249m0[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m            ─┬─  
 [38;5;240m  │[0m             ╰─── Unknown type Vec
[38;5;246m───╯[0m

[31m[05] Error:[0m Unknown variable v
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mv[38;5;249m.[0m[38;5;249mx[0m
 [38;5;240m  │[0m            ┬  
 [38;5;240m  │[0m            ╰── Unknown variable v
[38;5;246m───╯[0m

[31m[05] Error:[0m Unknown variable v
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mv[38;5;249m.[0m[38;5;249mx[0m[38;5;249m.[0m[38;5;249my[0m
 [38;5;240m  │[0m            ┬  
 [38;5;240m  │[0m            ╰── Unknown variable v
[38;5;246m───╯[0m

[31m[05] Error:[0m Unknown variable v
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0msource:1:13[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249mg[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0mv[38;5;249m[[0m[38;5;249m0[0m[38;5;249m][0m[38;5;249m.[0m[38;5;249my[0m
 [38;5;240m  │[0m            ┬  
 [38;5;240m  │[0m            ╰── Unknown variable v
[38;5;246m───╯[0m

Error: "Compiling failed with 7 errors"
